--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,11 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@distube/ytdl-core": "^4.16.12",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "youtubei.js": "^9.1.0",
+    "youtubei.js": "^16.0.1",
     "yt-dlp-exec": "^1.0.2",
     "yt-search": "^2.10.4"
   },
