--- a/appp/package.json
+++ b/appp/package.json
@@ -21,6 +21,7 @@
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
     "expo-linear-gradient": "~15.0.8",
+    "expo-notifications": "~0.32.15",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "lucide-react-native": "^0.562.0",
