--- a/appp/android/settings.gradle
+++ b/appp/android/settings.gradle
@@ -1,4 +1,9 @@
 pluginManagement {
+  repositories {
+    gradlePluginPortal()
+    mavenCentral()
+    google()
+  }
   def reactNativeGradlePlugin = new File(
     providers.exec {
       workingDir(rootDir)
@@ -31,7 +36,7 @@ extensions.configure(com.facebook.react.ReactSettingsExtension) { ex ->
 }
 expoAutolinking.useExpoModules()
 
-rootProject.name = 'Dm4a'
+rootProject.name = 'appp'
 
 expoAutolinking.useExpoVersionCatalog()
 
