--- a/appp/package.json
+++ b/appp/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "axios": "^1.13.2",
     "babel-preset-expo": "^54.0.9",
     "expo": "~54.0.30",
+    "expo-asset": "^12.0.12",
     "expo-av": "~16.0.8",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
@@ -29,6 +30,7 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-music-control": "^1.4.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-svg": "15.12.1",
@@ -37,6 +39,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
+    "@react-native-community/cli": "^20.0.2",
+    "@react-native/metro-config": "^0.83.0",
     "@types/react": "~19.1.0",
     "typescript": "~5.9.2"
   },
