--- a/appp/app.json
+++ b/appp/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "appp",
-    "slug": "appp",
+    "name": "Dm4a",
+    "slug": "Dm4a",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -31,7 +31,7 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.gian404.appp"
+      "package": "com.gian404.dm4a"
     },
     "web": {
       "favicon": "./assets/favicon.png"
