fix bug chạy 1p1s nhưng vẫn còn nhiều bug nó lạ lắm :V. Cơ bản vẫn dùng được Version 1.0.45

--- a/appp/app.json
+++ b/appp/app.json
@@ -22,7 +22,8 @@
     },
     "android": {
       "permissions": [
-        "WAKE_LOCK",
+        "FOREGROUND_SERVICE",
+        "FOREGROUND_SERVICE_MEDIA_PLAYBACK",
         "WAKE_LOCK"
       ],
       "adaptiveIcon": {
