--- a/appp/package.json
+++ b/appp/package.json
@@ -14,6 +14,8 @@
     "@expo-google-fonts/roboto-mono": "^0.4.1",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/slider": "5.0.1",
+    "@react-navigation/native": "^7.1.26",
+    "@react-navigation/native-stack": "^7.9.0",
     "axios": "^1.13.2",
     "babel-preset-expo": "^54.0.9",
     "expo": "~54.0.30",
@@ -30,9 +32,11 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-image-colors": "^2.5.1",
     "react-native-music-control": "^1.4.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "tailwindcss": "^3.4.19",
     "zustand": "^5.0.9"
