--- a/appp/package.json
+++ b/appp/package.json
@@ -23,6 +23,7 @@
     "expo-av": "~16.0.8",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
+    "expo-keep-awake": "~15.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-notifications": "~0.32.15",
     "expo-splash-screen": "~31.0.13",
